@@ -12,6 +12,7 @@ overall color attributes.
 * As a first example, added the graph-generating code from the doctests.
 * Split the first example into two in order to show the color differences as a
 separate example.
+* Added a third example.
 
 2006.01.23
 
